Update lab0-instalasi-jboss-eap.md